# embeddir

./: Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: lib.rs
